# RAID_WS25

wave_1/cheetah/: .gitignore  README.md
wave_1/cheetah/codebert_approach/: gini_split.py  save_codebert_embeddings.py  solution.py  top_100_features_indices.txt  top_100_features_with_scores.txt  top_200_features_indices.txt  top_200_features_with_scores.txt  top_350_features_indices.txt  top_350_features_with_scores.txt  top_400_features_indices.txt  top_400_features_with_scores.txt  top_500_features_indices.txt  top_500_features_with_scores.txt  top_features_indices.txt  top_features_with_scores.txt
wave_1/cheetah/evaluate/: evaluate_codebert.py  (+5 more)
wave_1/locusta/: CIFAR Poisoning CNN.ipynb  CIFAR Poisoning SVC.ipynb  CIFAR Poisoning.ipynb  Optimized Label Flipping.ipynb  Readme.md  pyproject.toml
wave_1/locusta/attacks/: attack.py
wave_1/locusta/models/: SVC.py  model.py
wave_2/: README.md
wave_2/animagus/: 0.1563.py
wave_2/decoder/: case_mod.py  mod_min.py  newline_whitespaces.py  overwrite.py
wave_2/encoder/: case_mod.py  case_mod_min.py  newline_whitespaces.py  overwrite.py
wave_2/snicket/: automated_autosubmit  autosubmit  autosync  effinet-b1-hpo-find-weight.py  effinet-b1-hpo.py  pyproject.toml  snicket.ipynb  submit_effinet_b0.py  submit_effinet_b1-fourier.py  submit_effinet_b1.py  submit_effinet_b1_bce.py  submit_effinet_b2.py  submit_effinet_v2s.py
wave_2/vader/: 0.014.ipynb  0.027.ipynb  background_buster.py  background_buster_improved.py  basic_solution.py  initial_attemps.py
wave_3/chimera/: models-edited.py  solution.py
(+15 files in other folders)
